--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
     "@astrojs/react": "^3.4.0",
     "@astrojs/rss": "^4.0.6",
     "@astrojs/sitemap": "^3.1.5",
+    "@astrojs/starlight": "^0.24.2",
+    "@astrojs/starlight-tailwind": "^2.0.3",
     "@astrolib/analytics": "^0.5.0",
     "@astrolib/seo": "^1.0.0-beta.5",
     "@emotion/react": "^11.11.4",
