--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "type": "module",
   "private": true,
   "engines": {
-    "node": "^16"
+    "node": "^20.x"
   },
   "scripts": {
     "dev": "astro dev",
