--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "@mui/material": "^5.15.20",
     "@vercel/analytics": "^1.3.1",
     "astro": "^4.10.2",
+    "astro-compress": "^2.2.28",
     "astro-embed": "^0.7.2",
     "astro-icon": "^1.1.0",
     "date-fns": "^3.6.0",
