--- a/.gitignore
+++ b/.gitignore
@@ -7,12 +7,12 @@ dist/
 src/content/.obsidian
 src/content/post/.obsidian
 src/content/template
+src/content/.smart-env
 
 # dependencies
 node_modules/
 
 # logs
-npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 pnpm-debug.log*
