--- a/package.json
+++ b/package.json
@@ -32,16 +32,19 @@
     "@fontsource-variable/inter": "^5.0.18",
     "@mui/icons-material": "^5.15.20",
     "@mui/material": "^5.15.20",
+    "@pagefind/default-ui": "^1.1.0",
     "@vercel/analytics": "^1.3.1",
     "astro": "^4.10.2",
     "astro-compress": "^2.2.28",
     "astro-embed": "^0.7.2",
     "astro-icon": "^1.1.0",
+    "astro-pagefind": "^1.5.0",
     "date-fns": "^3.6.0",
     "lib": "^5.1.0",
     "lib-utils-ts": "0.0.0-test",
     "limax": "4.1.0",
     "lodash.merge": "^4.6.2",
+    "pagefind": "^1.1.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "starlight-blog": "^0.8.3",
