--- a/package.json
+++ b/package.json
@@ -49,7 +49,8 @@
     "react-dom": "^18.3.1",
     "starlight-blog": "^0.11.0",
     "tabler-icons-react": "^1.56.0",
-    "unpic": "^3.18.0"
+    "unpic": "^3.18.0",
+    "vercel": "^35.1.0"
   },
   "devDependencies": {
     "@astrojs/mdx": "^3.1.3",
