--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
     "@astrojs/sitemap": "^3.2.1",
     "@astrojs/starlight": "^0.30.5",
     "@astrojs/starlight-tailwind": "^3.0.0",
-    "@astrojs/vercel": "^8.0.1",
+    "@astrojs/vercel": "^8.0.7",
     "@astrolib/analytics": "^0.5.0",
     "@astrolib/seo": "1.0.0-beta.8",
     "@emotion/react": "^11.13.5",
@@ -79,7 +79,7 @@
     "prettier-plugin-astro": "^0.14.1",
     "reading-time": "^1.5.0",
     "rehype-plugin-image-native-lazy-loading": "^1.2.0",
-    "sharp": "0.33.4",
+    "sharp": "^0.33.5",
     "tailwind-merge": "^2.5.5",
     "tailwindcss": "^3.4.15",
     "typescript": "^5.7.2",
