--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
   },
   "dependencies": {
     "@astrojs/check": "^0.9.4",
-    "@astrojs/react": "^4.1.2",
+    "@astrojs/react": "^4.2.0",
     "@astrojs/rss": "^4.0.11",
     "@astrojs/sitemap": "^3.2.1",
     "@astrojs/starlight": "^0.30.5",
@@ -33,6 +33,8 @@
     "@mui/icons-material": "^5.16.8",
     "@mui/material": "^5.16.8",
     "@pagefind/default-ui": "^1.2.0",
+    "@types/react": "^19.0.10",
+    "@types/react-dom": "^19.0.4",
     "@vercel/analytics": "^1.4.1",
     "astro": "^5.1.3",
     "astro-compress": "^2.3.5",
@@ -45,8 +47,8 @@
     "limax": "4.1.0",
     "lodash.merge": "^4.6.2",
     "pagefind": "^1.2.0",
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1",
+    "react": "^19.0.0",
+    "react-dom": "^19.0.0",
     "starlight-blog": "^0.11.1",
     "tabler-icons-react": "^1.56.0",
     "unpic": "^3.20.0",
